Refactor MockDataFileHub to be shared between modules Creating a test-jar just for this single class is a bit overkill